# MOSShell

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.ai_partners/: CLAUDE.md
.ai_partners/dialogs/: 2026-05-10-review-collaboration-style-with-deepseek-v4.md
.ai_partners/features/: README.md  TEMPLATE.md
.design/: 2026-05-10-ai_native_feature_tracking_file_system_convention.md  2026-05-11-zmq_fractal_architecture.md  2026-05-14-ai_cognitive_memory_as_channel.md
.discuss/: 2026-05-10-glossary_and_design_language_alignment.summary.md  2026-05-10-intelligence_as_phenomenon_terminology_choice.summary.md  2026-05-17_layers_of_development.md  architecture_complexity_and_pruning_debate.summary.md
ai_partners/prompts/: deepseek_v3.1_partner_v2.md
benchmark/sax_bm/: create_sax_time.py
demo/speech/: pulseaudio_player.py  pyaudio_player.py  speech_case.py  volcengine_tts.py
examples/: README.md  moss_agent.py  slide_studio_use.md
examples/app_store_channel_demo/: README.md  main.py
examples/jetarm_demo/: connect_pychannel_with_rcply.py  jetarm_agent.py
examples/jetarm_ws/: README.md
examples/miku/: README.md  main.py  miku_provider.py
examples/minecraft_bot/: main.py
examples/moss_zmq_channels/: miku_app.py  slide_app.py
examples/reachy_mini_moss/: main.py  state.py
examples/script_channel_demo/: target_script.py
examples/vision_exam/: vision_provider.py  vision_proxy.py
partners/ai/: deepseek_v3.1_developer_partener_instruction.md
scripts/ghost/: run_atom_hello.py  test_on_challenge.py  (+1 more)
(+666 files in other folders)
